--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_menu"/>
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu"/>
 
 
 
