--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -7,5 +7,10 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="첫 번째 프래그먼트"
+        android:layout_gravity="center"
 
 </FrameLayout>
